# agentic-image-analyser

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  EVALUATIONS.md  README.md  agentic-vision.schema.json  agentic-vision.toml.example  pyproject.toml
.github/workflows/: test.yml
docs/: initial-research.md
mcp/: mcp_tools.py  server.py
scripts/: verify_auth.py
skills/agentic-vision/: SKILL.md
skills/agentic-vision/scripts/: analyze.py  bootstrap.sh  precheck.py
src/agentic_vision/: __init__.py  __main__.py  _mcp.py  _mcp_tools.py  cli.py  config.py  engine.py  fallback.py  output.py  precheck.py  rate_limiter.py
src/agentic_vision/auth/: anthropic_api.py  base.py  code_assist.py  gemini_api_key.py  gemini_login.py  gemini_oauth.py  openai_compat.py  resolver.py
src/agentic_vision/providers/: anthropic.py  base.py  code_assist.py  gemini_direct.py  openai_compat.py
tests/: conftest.py
tests/integration/: test_gemini_oauth.py
tests/unit/: test_auth_gemini_oauth.py  test_auth_resolver.py  test_config.py  test_fallback.py  test_output.py  test_precheck.py  test_rate_limiter.py
