[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-vision"
version = "0.1.0"
description = "Provider-agnostic image analysis delegation engine for Claude Code"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["ai", "vision", "image-analysis", "claude-code", "gemini", "mcp"]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "google-generativeai>=0.8",
    "openai>=1.30",
    "anthropic>=0.34",
    "pillow>=10.0",
]

[project.optional-dependencies]
mcp = ["fastmcp>=0.9"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "commitizen>=3.20",
    "types-pillow",
    "respx>=0.21",   # httpx mock for unit tests
]

[project.scripts]
agentic-vision = "agentic_vision.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_vision"]

# ─── Ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["agentic_vision"]

# ─── Mypy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
exclude = ["scripts/", "tests/"]

[[tool.mypy.overrides]]
module = ["google.generativeai", "google.generativeai.*"]
ignore_missing_imports = true
no_implicit_reexport = false

[[tool.mypy.overrides]]
module = ["anthropic", "anthropic.*", "openai", "openai.*"]
ignore_missing_imports = true

# ─── Pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires AGENTIC_VISION_INTEGRATION_TEST=1 and real credentials",
    "slow: may take > 5 seconds",
]
filterwarnings = ["ignore::DeprecationWarning"]

# ─── Coverage ────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src/agentic_vision"]
omit = ["*/tests/*", "*/scripts/*"]

[tool.coverage.report]
# fail_under covers unit-testable code; providers/CLI require integration tests
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
omit = [
    "*/providers/code_assist.py",
    "*/providers/gemini_direct.py",
    "*/providers/openai_compat.py",
    "*/providers/anthropic.py",
    "*/cli.py",
    "*/engine.py",
    "*/auth/gemini_oauth.py",
]

# ─── Commitizen ──────────────────────────────────────────────────────────────
[tool.commitizen]
version_scheme = "semver"
tag_format = "v$version"
update_changelog_on_bump = true
version_files = ["pyproject.toml:version"]
